www/css/general.css
h1 {
  color: rgb(0, 0, 0);
  text-align: center;
}

h2 {
  color: rgb(0, 0, 0);
  text-align: center;
}

h3 {
  text-align: center;
}

p {
  text-align: center;
}

ion-item {
  font-weight: lighter;
  text-align: center;
}

.ng-invalid {
  color: red;
}

.ng-invalid p {
  margin-top: 10px;
  text-align: start;
}

.button-clear {
  font-weight: 500;
}

#success {
  color: green;
}

#error {
  color: red;
}

.deleteButton {
  -moz-box-shadow:inset 0 34px 2px 5px #e67a73;
  -webkit-box-shadow:inset 0 34px 2px 5px #e67a73;
  box-shadow:inset 0 34px 2px 5px #e67a73;
  background-color:#e4685d;
  -moz-border-radius:25px;
  -webkit-border-radius:25px;
  border-radius:25px;
  display:inline-block;
  cursor:pointer;
  color:#ffffff;
  font-family: Courier New, serif;
  font-size:13px;
  font-weight:bold;
  padding:7px 15px;
  text-decoration:none;
}

.deleteButton:hover {
  background-color:#eb675e;
}

.deleteButton:active {
  position:relative;
  top:1px;
}

.card {
  font-weight: lighter;
  text-align: center;
  box-shadow: 3px 2px 5px #178025;
}

#farm_text {
  font-weight: bold;
  color: #178025;
  text-shadow: 1px 1px 3px #178025;
}

#progress-ring {
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  width: 45px;
  height: 45px;
}

